--- a/.env.example
+++ b/.env.example
@@ -67,8 +67,8 @@ DJANGO_EMAIL_HOST_USER=
 DJANGO_EMAIL_HOST_PASSWORD=
 DJANGO_EMAIL_USE_TLS=True
 DJANGO_EMAIL_USE_SSL=False
-DJANGO_DEFAULT_FROM_EMAIL=noreply@correctiv.org
-DJANGO_EMAIL_SUBJECT_PREFIX=[Correctiv]
+DJANGO_DEFAULT_FROM_EMAIL=noreply@example.net
+DJANGO_EMAIL_SUBJECT_PREFIX=[generic_vote]
 
 ## Redis
 DJANGO_REDIS_HOST=localhost
