--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
     volumes:
       - sqlite_data:/app/_db:rw
-      - app_socket:/run/podcast_aggregator
+      - app_socket:/run/generic_vote
       - static_files:/static_files
       - media_files:/app/uploads
     networks:
@@ -32,7 +32,7 @@ services:
     networks:
       - generic_vote
     volumes:
-      - app_socket:/run/podcast_aggregator:ro
+      - app_socket:/run/generic_vote:ro
       - static_files:/usr/share/nginx/html/static_files:ro
       - media_files:/usr/share/nginx/html/media_files:ro
       - ./contrib/nginx.conf:/etc/nginx/nginx.conf:ro
