--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,14 @@ DJANGO_MIGRATE=yes
 # Must not end have a trailing slash
 DJANGO_DOMAIN=http://localhost:8000
 
+# Django path prefix
+# If the app is not running on the root path, set this to the path
+# Path prefix to use for all urls
+# Must have a trailing slash
+# Example: generic_vote/
+# Default: empty
+DJANGO_APP_ROOT=
+
 ## Mail settings
 # https://docs.djangoproject.com/en/4.1/topics/email/
 DJANGO_EMAIL_HOST=localhost
